--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,8 @@
-body 
-{
-    background-color: #707070;
+body {
+    background-color: #052653;
 }
 
-#title 
-{
+#title {
     font-size: 40px;
     width: 100%;
     margin: 2% 5%;
@@ -13,66 +11,68 @@ body
     color: #FFFFFF;
 }
 
-#loginDiv
-{
+#loginDiv {
+    font-size: 30px;
+    width: 70%;
+    margin-top: 0%;
+    margin-left: 15%;
+    padding: 25px;
+    background-color: #697586;
+    border-radius: 25px;
+    border: 1px solid;
+    box-shadow: 10px;
+}
+
+#loggedInDiv {
     font-size: 30px;
     width: 70%;
     margin-left: 15%;
     padding: 25px;
-    background-color: #b2b2b2;
+    background-color: #697586;
+    border-radius: 25px 25px 0px 0px;
 }
 
-#loggedInDiv
-{
+#accessUIDiv {
     font-size: 30px;
     width: 70%;
     margin-left: 15%;
     padding: 25px;
-    background-color: #b2b2b2;
+    background-color: #697586;
+    border-radius: 0px 0px 25px 25px;
 }
 
-#accessUIDiv
-{
-    font-size: 30px;
-    width: 70%;
-    margin-left: 15%;
-    padding: 25px;
-    background-color: #b2b2b2;
-}
-
-.buttons
-{
+.buttons {
     font-size: 30px;
     border-radius: 25px;
-    width: 50%;
-    margin-left: 25%;
+    width: 20%;
+    margin-left: 40%;
     font-family: 'Ubuntu', sans-serif;
 }
 
-.buttons:hover{
+.buttons:hover {
     background-color: #00d5124f;
     color: #FFFFFF;
     opacity: 50%;
 }
 
-#loginName
-{
-	font-size: 30px;
-}
-#loginPassword
-{
-	font-size: 30px;
-}
-#searchText
-{
-	font-size: 30px;
-}
-#colorText
-{
-	font-size: 30px;
+#loginName {
+    font-size: 30px;
 }
 
-input[type="text"],input[type="password"]{
+#loginPassword {
+    font-size: 30px;
+}
+
+#searchText {
+    font-size: 30px;
+}
+
+#colorText {
+    font-size: 30px;
+}
+
+input[type="text"],
+input[type="password"] {
     border-radius: 25px;
     text-align: center;
     width: 80%;
@@ -81,7 +81,18 @@ input[type="text"],input[type="password"]{
     font-family: 'Ubuntu', sans-serif;
 }
 
-#inner-title{
+#inner-title {
+    display: inline-block;
+    font-size: 0.8em;
+    width: 90%;
+    text-align: center;
+    margin-left: 6%;
+    margin-bottom: 2%;
+    font-family: 'Ubuntu', sans-serif;
+    color: black;
+}
+
+#loginResult {
     display: inline-block;
     font-size: 0.8em;
     width: 90%;
@@ -92,30 +103,19 @@ input[type="text"],input[type="password"]{
     color: #95060a;
 }
 
-#loginResult, #registerResult{
-    display: inline-block;
-    font-size: 0.8em;
-    width: 90%;
-    text-align: center;
-    margin-left: 5%;
-    margin-bottom: 2%;
-    font-family: 'Ubuntu', sans-serif;
-    color: #95060a;
-}
-
-#userName{
+#userName {
     display: inline-block;
     width: 80%;
     margin-left: 10%;
     text-align: center;
 }
 
-#logoutButton{
+#logoutButton {
     width: 20%;
     margin-left: 40%;
 }
 
-select{
+select {
     width: 30%;
     margin-left: 35%;
     margin-top: 2%;
@@ -123,11 +123,11 @@ select{
     font-family: 'Ubuntu', sans-serif;
 }
 
-#colorSearchResult{
+#colorSearchResult {
     display: none;
 }
 
-#colorAddResult{
+#colorAddResult {
     display: inline-block;
     font-size: 0.8em;
     width: 90%;
@@ -137,13 +137,4 @@ select{
     margin-bottom: 1%;
     font-family: 'Ubuntu', sans-serif;
     color: #95060a;
-}
-
-.m-1{
-    margin-top: 10px;
-}
-
-.registerFields{
-    height: 50px;
-    font-size: 22px;
 }
