--- a/css/color_styles.css
+++ b/css/color_styles.css
@@ -1,39 +1,26 @@
 body {
-    background-image: linear-gradient(to right, #16364a, gray);
+    background-color: #052653;
 }
 
 #title {
     font-size: 40px;
     width: 100%;
+    margin: 2% 5%;
     text-align: center;
-    font-family: Arial;
-    color: black;
-}
-
-#registerTitle {
-    font-size: 35px;
-    width: 100%;
-    text-align: center;
-    font-family: Arial;
-    color: black;
+    font-family: 'Ubuntu', sans-serif;
+    color: #FFFFFF;
 }
 
 #loginDiv {
-    width: 45%;
-    height: 45%;
-    color: whitesmoke;
-    backdrop-filter: blur(5px) saturate(180%);
-    -webkit-backdrop-filter: blur(16px) saturate(10%);
-    background-color: rgba(236, 235, 245, 0.300);
-    border-radius: 12px;
-    border: 1px solid rgba(255, 255, 255, 0.125);
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-
-    margin: auto;
+    font-size: 30px;
+    width: 70%;
+    margin-top: 0%;
+    margin-left: 15%;
+    padding: 25px;
+    background-color: #697586;
+    border-radius: 10px;
+    border: 1px solid;
+    box-shadow: 10px;
 }
 
 #loggedInDiv {
@@ -55,59 +42,25 @@ body {
 }
 
 .buttons {
-    font-size: 25px;
-    border-radius: 5px;
+    font-size: 30px;
+    border-radius: 25px;
     width: 20%;
-    margin-left: 42%;
-    font-family: Arial;
-    margin-bottom: 2%;
+    margin-left: 40%;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 .buttons:hover {
     background-color: #00d5124f;
     color: #FFFFFF;
     opacity: 50%;
-    cursor: pointer;
-}
-
-.linkers {
-    background-color: transparent;
-        border: transparent;
-        color: blue;
-        margin-left: 65%;
-}
-
-.linkers:hover {
-    background-color: #00d5124f;
-    color: #FFFFFF;
-    opacity: 50%;
-    cursor: pointer;
-}
-
-.registerFields {
-    border-width: 2px;
-    font-size: 28px;
-    border-radius: 5px;
-    width: 80%; 
-}
-
-.input {
-    text-align: center;
 }
 
 #loginName {
-    border-width: 1px;
-    margin-top: 2%;
-    font-size: 28px;
-    border-radius: 5px;
-    width: 80%;
+    font-size: 30px;
 }
 
 #loginPassword {
-    border-width: 1px;
-    font-size: 28px;
-    border-radius: 5px;
-    width: 80%;
+    font-size: 30px;
 }
 
 #searchText {
@@ -130,12 +83,12 @@ input[type="password"] {
 
 #inner-title {
     display: inline-block;
-    font-size: 15px;
+    font-size: 0.8em;
     width: 90%;
     text-align: center;
     margin-left: 6%;
     margin-bottom: 2%;
-    font-family: Arial;
+    font-family: 'Ubuntu', sans-serif;
     color: black;
 }
 
@@ -146,7 +99,7 @@ input[type="password"] {
     text-align: center;
     margin-left: 5%;
     margin-bottom: 2%;
-    font-family: Arial;
+    font-family: 'Ubuntu', sans-serif;
     color: #95060a;
 }
 
@@ -161,7 +114,6 @@ input[type="password"] {
     width: 20%;
     margin-left: 40%;
 }
-
 
 select {
     width: 30%;
@@ -185,4 +137,54 @@ select {
     margin-bottom: 1%;
     font-family: 'Ubuntu', sans-serif;
     color: #95060a;
+}
+
+/* The Modal (background) */
+.modal {
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Sit on top */
+    padding-top: 100px;
+    /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
+}
+
+
+/* MODAL STYLINGS */
+/* Modal Content */
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+/* The Close Button */
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
 }
