--- a/css/color_styles.css
+++ b/css/color_styles.css
@@ -1,58 +1,43 @@
 body {
-    background-color: #052653;
+    background-image: linear-gradient(to right, #0a1a24, #15364a);
 }
 
 #title {
     font-size: 40px;
-    width: 100%;
-    margin: 2% 5%;
     text-align: center;
     font-family: 'Ubuntu', sans-serif;
     color: #FFFFFF;
 }
 
-#loginDiv {
-    font-size: 30px;
-    width: 70%;
-    margin-top: 0%;
-    margin-left: 15%;
-    padding: 25px;
-    background-color: #697586;
-    border-radius: 10px;
-    border: 1px solid;
-    box-shadow: 10px;
-}
-
-#loggedInDiv {
-    font-size: 30px;
-    width: 70%;
-    margin-left: 15%;
-    padding: 25px;
-    background-color: #697586;
-    border-radius: 25px 25px 0px 0px;
-}
-
-#accessUIDiv {
-    font-size: 30px;
-    width: 70%;
-    margin-left: 15%;
-    padding: 25px;
-    background-color: #697586;
-    border-radius: 0px 0px 25px 25px;
+#contactDiv {
+    width: 50vw;
+    min-width: 500px;
+    height: 500px;
+    color: whitesmoke;
+    backdrop-filter: blur(5px) saturate(180%);
+    -webkit-backdrop-filter: blur(16px) saturate(10%);
+    background-color: rgba(236, 235, 245, 0.300);
+    border-radius: 12px;
+    border: 1px solid rgba(255, 255, 255, 0.125);
+    margin: 0px auto;
+    margin-top: 10vh;
 }
 
 .buttons {
-    font-size: 30px;
-    border-radius: 25px;
-    width: 20%;
-    margin-left: 40%;
+    font-size: 25px;
+    border-radius: 5px;
+    width: 10vw;
+    margin: 0px 20vw;
+    margin-top: 5px;
     font-family: 'Ubuntu', sans-serif;
+    margin-bottom: 0px;
 }
 
 .buttons:hover {
     background-color: #00d5124f;
     color: #FFFFFF;
     opacity: 50%;
+    cursor: pointer;
 }
 
 #loginName {
@@ -105,6 +90,8 @@ input[type="password"] {
 
 #userName {
     display: inline-block;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 20px;
     width: 80%;
     margin-left: 10%;
     text-align: center;
