--- a/css/color_styles.css
+++ b/css/color_styles.css
@@ -26,11 +26,13 @@ body {
 .buttons {
     font-size: 25px;
     border-radius: 5px;
-    width: 10vw;
+    width: 12vw;
     margin: 0px 20vw;
     margin-top: 5px;
     font-family: 'Ubuntu', sans-serif;
     margin-bottom: 0px;
+    display: inline-block;
+    text-align: center;
 }
 
 .buttons:hover {
@@ -48,8 +50,23 @@ body {
     font-size: 30px;
 }
 
+#searchContactButton, #addContactButton{
+    margin: 0px 19vw;
+}
+
 #searchText {
     font-size: 30px;
+}
+
+#searchId{
+    font-size: 20px;
+    margin-left: 6vw;
+    font-family: 'Ubuntu', sans-serif;
+}
+
+#data{
+    font-size: 20px;
+    border-radius: 5px;
 }
 
 #colorText {
@@ -106,7 +123,7 @@ select {
     width: 30%;
     margin-left: 35%;
     margin-top: 2%;
-    font-size: 0.75em;
+    font-size: 20px;
     font-family: 'Ubuntu', sans-serif;
 }
 
