--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,16 @@ body {
     margin-top: 20px;
 }
 
+#subTitle {
+    font-size: 60px;
+    width: 100%;
+    display: inline-block;
+    text-align: center;
+    font-family: 'Great Vibes';
+    color: whitesmoke;
+    margin-bottom: 20px;
+}
+
 #registerTitle {
     font-size: 35px;
     width: 100%;
@@ -25,67 +35,74 @@ body {
 #loginDiv {
     width: 30vw;
     min-width: 300px;
-    height: 450px;
+    height: 550px;
     color: whitesmoke;
     backdrop-filter: blur(10px);
     /* -webkit-backdrop-filter: blur(16px) saturate(10%); */
-    background-color: rgba(2, 26, 2, .5);
+    background-color: rgba(2, 26, 2, .7);
     border-radius: 12px;
     border: none;
     margin: 0px auto;
     margin-top: 5px;
 }
 
-.loginTitle{
+.loginTitle, .registerTitle{
     font-family: 'Great Vibes';
     font-size: 75px;
     text-align: center;
     width: 100%;
     display: inline-block;
-    margin-top: 30px;
+    margin-top: 40px;
 }
 
 #registerDiv{
-    width: 50vw;
-    min-width: 500px;
-    height: 60vh;
+    width: 30vw;
+    min-width: 300px;
+    height: 650px;
     color: whitesmoke;
     backdrop-filter: blur(10px);
     /* -webkit-backdrop-filter: blur(16px) saturate(10%); */
-    background-color: rgba(2, 26, 2, .5);
+    background-color: rgba(2, 26, 2, .7);
     border-radius: 12px;
     border: none;
     margin: 0px auto;
-    margin-top: 10px;
+    margin-top: 5px;
 }
 
-.loginButton, .registerButton, .backButton {
+.loginButton, .registerButton, .backButton{
     font-size: 25px;
     border-radius: 5px;
+    border: none;
     width: 10vw;
     min-width: 75px;
     margin: 0px 10vw;
-    margin-top: 5px;
+    margin-top: 25px;
     font-family: 'Ubuntu', sans-serif;
     margin-bottom: 0px;
 }
 
-.registerButton, .backButton{
-    font-size: 25px;
-    border-radius: 5px;
-    width: 10vw;
-    min-width: 75px;
-    margin: 0px 15vw;
-    margin-top: 5px;
+.registerText{
+    color: whitesmoke;
     font-family: 'Ubuntu', sans-serif;
-    margin-bottom: 0px;
+    font-size: 16px;
+}
+
+.registerText:hover{
+    color: purple;
+}
+
+.registerText:active{
+    color: #aa48db;
 }
 
 .loginButton:hover, .registerButton:hover, .backButton:hover {
-    background-color: #00d5124f;
-    color: #FFFFFF;
-    opacity: 50%;
+    background-color: #390661;
+    color: white;
     cursor: pointer;
+}
+
+.loginButton:active, .registerButton:active, .backButton:active{
+    background-color: purple;
 }
 
 .linkerDiv{
@@ -98,7 +115,7 @@ body {
     background-color: rgba(2, 26, 2, .8);
     height: 75px;
     width: 200px;
-    border-radius: 5px;
+    border-radius: 10px;
     border: none;
     color: whitesmoke;
     margin: 0px auto;
@@ -124,10 +141,13 @@ body {
 
 
 .registerFields {
-    border-width: 2px;
+    border: none;
+    border-bottom: whitesmoke solid 2px;
+    color: whitesmoke;
+    background: transparent;
     font-size: 28px;
-    border-radius: 5px;
     width: 80%; 
+    border-radius: 0px;
 }
 
 .input {
@@ -166,7 +186,33 @@ body {
 }
 
 #searchText {
-    font-size: 30px;
+    border: none;
+    border-bottom: whitesmoke solid 2px;
+    color: whitesmoke;
+    background: transparent;
+    font-size: 28px; 
+    border-radius: 0px;
+    margin-left: 4vw;
+    margin-right: 0px;
+    display: inline-block;
+    width: calc(100% - 4vw);
+}
+
+#searchId {
+    font-size: 28px;
+    font-family: 'Ubuntu', sans-serif;
+    display: inline-block;
+    margin-left: 4vw;
+    margin-top: 30px;
+    display: block;
+}
+
+.searchButtons{
+    display: inline-flex;
+    width: 29.5%;
+    flex-direction: row;
+    position: relative;
+    top: 7px;
 }
 
 #colorText {
@@ -175,7 +221,6 @@ body {
 
 input[type="text"],
 input[type="password"] {
-    border-radius: 10px;
     text-align: center;
     width: 80%;
     margin-left: 10%;
@@ -189,26 +234,44 @@ input[type="password"] {
     margin-top: 10px;
 }
 
-#loginResult, #registerResult {
+#loginResult, #registerResult, #contactAddResult {
     display: inline-block;
     font-size: 20px;
     font-family: 'Ubuntu', sans-serif;
-    color: #95060a;
+    color: gold;
 }
 
 #userName {
     display: inline-block;
-    width: 80%;
-    margin-left: 10%;
-    text-align: center;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 25px;
+    margin-right: 25px;
 }
 
 #logoutButton {
-    width: 20%;
-    margin-left: 40%;
+    font-size: 25px;
+    border-radius: 5px;
+    border: none;
+    width: 10vw;
+    min-width: 75px;
+    font-family: 'Ubuntu', sans-serif;
+    margin-top: 10px;
+    margin-right: 25px;
 }
 
+#logoutButton:hover{
+    cursor: pointer;
+    background-color: #390661;
+    color: whitesmoke;
+}
 
+#loggedInDiv{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-top: 25px;
+}
 select {
     width: 30%;
     margin-left: 35%;
@@ -241,17 +304,32 @@ select {
     display: inline-block;
 }
 
-#contactDiv {
-    width: 50vw;
-    min-width: 500px;
+.welcomeDiv{
+    width: 100%;
+    height: 10vw;
+    overflow: hidden;
+}
+
+.welcome{
+    font-size: 8vw;
+    width: 100%;
+    display: inline-block;
+    text-align: center;
+    font-family: 'Great Vibes';
     color: whitesmoke;
-    backdrop-filter: blur(5px) saturate(180%);
-    -webkit-backdrop-filter: blur(16px) saturate(10%);
-    background-color: rgba(236, 235, 245, 0.300);
+}
+
+#contactDiv {
+    width: 95vw;
+    height: 75vh;
+    color: whitesmoke;
+    overflow-y: scroll;
+    backdrop-filter: blur(15px);
+    background-color: rgba(2, 26, 2, .85);
     border-radius: 12px;
-    border: 1px solid rgba(255, 255, 255, 0.125);
+    border: none;
     margin: 0px auto;
-    margin-top: 10vh;
+    margin-top: 20px;
 }
 
 #loginName {
@@ -263,9 +341,12 @@ select {
 }
 
 #addContactButton {
-    margin: 0px;
-    border-radius: 20px;
+    border-radius: 15px;
     cursor: pointer;
+    width: 65px;
+    height: 60px;
+    border: none;
+    margin-left: 40px;
 }
 
 #addContactButton img {
@@ -274,13 +355,18 @@ select {
 }
 
 #searchContactButton {
-    border-radius: 20px;
+    border-radius: 15px;
     cursor: pointer;
+    width: 65px;
+    height: 60px;
+    border: none;
+    margin-left: 20px;
 }
 
 #searchContactButton img {
-    height: 40px;
-    width: 40px;
+    height: 50px;
+    width: 50px;
+
 }
 
 /* The Modal (background) */
@@ -290,43 +376,73 @@ select {
     z-index: 1;
     left: 0;
     top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
     background-color: rgba(0, 0, 0, 0.4);
-    color: black;
+    backdrop-filter: blur(10px);
 }
 
 .modal-content {
-    background-color: #fefefe;
-    margin: 15% auto;
+    margin: auto;
+    margin-top: 10vh;
     padding: 20px;
-    border: 1px solid #888;
-    border-radius: 10px;
-   font-family: 'Ubuntu', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 20px;
+    width: 40%;
+    background-color: rgba(5, 52, 5, .9);
+    border-radius: 12px;
+    border: none;
+    color: whitesmoke;
+}
+
+.modal-input-div{
     width: 80%;
+    margin-left: 10%;
+}
+
+.modal-input{
+    width: 100% !important;
+    border-radius: 0px;
+    margin-left: 0px !important;
+    margin-right: 0px !important;
+    display: block;
+}
+
+.editTitle{
+    font-family: 'Great Vibes';
+    font-size: 75px;
+    width: 100%;
+    text-align: center;
+    display: inline-block;
 }
 
 #editForm {
-   width: 30%;
+   width: 100%;
    border-radius: 5px;
 
 }
 
-#editFirstName {
+#saveEdit{
+    font-size: 25px;
     border-radius: 5px;
+    border: none;
+    width: 20%;
+    min-width: 75px;
+    margin: 0px 40%;
+    margin-top: 20px;
+    font-family: 'Ubuntu', sans-serif;
+    margin-bottom: 0px;
+    cursor: pointer;
 }
 
-#editLastName {
-    border-radius: 5px;
+#saveEdit:hover{
+    background-color: #390661;
+    color: white;
 }
 
-#editPhoneNumber {
-    border-radius: 5px;
-}
-
-#editEmail {
-    border-radius: 5px;
+#saveEdit:active{
+    background-color: purple;
 }
 
 
@@ -366,7 +482,20 @@ select {
    background-color: red;
 }
 
+#contactSearchResultDiv{
+    margin-left: 4vw;
+    font-size: 18px;
+    margin-top: 35px;
+    margin-bottom: 5px;
+}
+
 /* Styles for the table */
+#table-container{
+    width: 90%;
+    margin-left: 4vw;
+    margin-bottom: 50px;
+}
+
 table {
    border-collapse: collapse;
    width: 100%;
@@ -375,15 +504,50 @@ table {
 }
 
 th, td {
-
+   color: whitesmoke;
    border-top: 1px solid #ddd;
    padding: 8px;
    text-align: left;
+   font-size: 20px;
+}
 
+tr {
+    border-bottom: 1px solid white;
 }
 
 th {
-   background-color: #f2f2f2;
+   background-color: darkgreen;
    font-weight: bold;
    font-size: 25px;
 }
+
+#deleteButton{
+    margin-left: 10px;
+    cursor: pointer;
+}
+
+#editButton{
+    cursor: pointer;
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: rgba(34,45,14 .8);
+    border-radius: 12px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: rgba(221, 195, 44, 0.826);
+    border-radius: 12px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #3e3e3e;
+  }
